# Daydream-Whisper

./: .gitignore  README.md  dwhisper  install.sh  pyproject.toml  uninstall.sh
src/daydream/: __init__.py  __main__.py
src/dwhisper/: __init__.py  __main__.py  audio.py  cli.py  config.py  correction.py  doctor.py  models.py  postprocess.py  profiles.py  realtime.py  registry.py  server.py  transcriber.py  utils.py
tests/: helpers.py  test_audio.py  test_cli.py  test_config.py  test_correction.py  test_doctor.py  test_local_registry.py  test_models.py  test_output_formats.py  test_packaging.py  test_postprocess.py  test_profiles.py  test_realtime.py  test_registry.py  test_server.py  test_transcriber.py  test_utils.py
